app/components/Hero/hero.module.css
.heroSection {
  background: var(--black);
  color: var(--white);
  padding-bottom: 5rem;
}

.heroContainer {
  display: flex;
  flex-direction: column;
  gap: 3rem;
}

.heroContainer h1 {
  font-size: 2rem;
  text-transform: uppercase;
  font-weight: 600;
  line-height: 1.2;
}

.heroTextContainer {
  display: flex;
  flex-direction: column;
}

.heroTextContainer p {
  font-weight: 300;
  line-height: 1.75;
  color: var(--gray);
}

.heroButtonContainer {
  display: flex;
  gap: 2rem;
}

@media screen and (min-width: 768px) {
  .heroContainer h1 {
    font-size: 3rem;
  }
}

@media screen and (min-width: 992px) {
  .heroContainer h1 {
    font-size: 5rem;
  }

  .heroTextContainer {
    max-width: 40%;
  }
}

@media screen and (min-width: 1200px) {
  .heroSection {
    padding-bottom: 0;
  }
}

